--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
           <h1 class="hero-tittle">Ефективні рішення для вашого бізнесу</h1>
           <div class="hero-button">
-            <button type="button" class="button-primary">
+            <button type="button" class="button-primary" data-modal-open>
               Замовити послугу
             </button>
           </div>
@@ -403,28 +403,28 @@
           <strong class="tittle-footer">приєднуйтесь</strong>
           <ul class="footer-social">
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="/"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="/"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="/"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="/"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
@@ -434,5 +434,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-button" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/icon.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
