--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="nav-item">
               <a href="./portfolio.html" class="link-nav">Портфоліо</a>
             </li>
-            <li class="nav-item"><a href="/" class="link-nav">Контакти</a></li>
+            <li class="nav-item"><a href="#" class="link-nav">Контакти</a></li>
           </ul>
         </nav>
         <ul class="auth-nav list">
@@ -166,28 +166,28 @@
                 <p lang="en" class="paragraph">Product Designer</p>
                 <ul class="social">
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
@@ -208,28 +208,28 @@
                 <p lang="en" class="paragraph">Frontend Developer</p>
                 <ul class="social">
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href="">
+                    <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
@@ -250,28 +250,28 @@
                 <p lang="en" class="paragraph">Marketing</p>
                 <ul class="social">
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
@@ -292,28 +292,28 @@
                 <p lang="en" class="paragraph">UI Designer</p>
                 <ul class="social">
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list">
-                    <a class="social-link" href=""
+                    <a class="social-link" href="#"
                       ><svg class="social-icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
@@ -331,42 +331,42 @@
           <h2 class="section-tittle">Постійні клієнти</h2>
           <ul class="client-list">
             <li class="client-company">
-              <a href="" class="company-link">
+              <a href="#" class="company-link">
                 <svg class="client-icon" width="41" height="47">
                   <use href="./images/icon.svg#icon-group"></use>
                 </svg>
               </a>
             </li>
             <li class="client-company">
-              <a href="" class="company-link">
+              <a href="#" class="company-link">
                 <svg class="client-icon" width="40" height="52">
                   <use href="./images/icon.svg#icon-tagline"></use>
                 </svg>
               </a>
             </li>
             <li class="client-company">
-              <a href="" class="company-link">
+              <a href="#" class="company-link">
                 <svg class="client-icon" width="43" height="41">
                   <use href="./images/icon.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="client-company">
-              <a href="" class="company-link">
+              <a href="#" class="company-link">
                 <svg class="client-icon" width="86" height="41">
                   <use href="./images/icon.svg#icon-foster"></use>
                 </svg>
               </a>
             </li>
             <li class="client-company">
-              <a href="" class="company-link">
+              <a href="#" class="company-link">
                 <svg class="client-icon" width="63" height="45">
                   <use href="./images/icon.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="client-company">
-              <a href="" class="company-link">
+              <a href="#" class="company-link">
                 <svg class="client-icon" width="94" height="44">
                   <use href="./images/icon.svg#icon-line"></use>
                 </svg>
@@ -403,28 +403,28 @@
           <strong class="tittle-footer">приєднуйтесь</strong>
           <ul class="footer-social">
             <li class="footer-list">
-              <a class="footer-link" href="/"
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href="/"
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href="/"
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href="/"
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
