--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
               <a href="/" class="portfolio-link current">Портфоліо</a>
             </li>
             <li class="nav-item">
-              <a href="/" class="portfolio-link">Контакти </a>
+              <a href="#" class="portfolio-link">Контакти </a>
             </li>
           </ul>
         </nav>
@@ -83,7 +83,7 @@
           </ul>
           <ul class="portfolio">
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio1.jpg"
                   alt="Технокряк"
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio2.jpg"
                   alt="Постер"
@@ -113,7 +113,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio3.jpg"
                   alt="Ресторан"
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio4.jpg"
                   alt="Проєкт прайм"
@@ -141,7 +141,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio5.jpg"
                   alt="Проєкт бокс"
@@ -155,7 +155,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio6.jpg"
                   alt="Натхнення"
@@ -169,7 +169,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio7.jpg"
                   alt="Видання"
@@ -183,7 +183,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio8.jpg"
                   alt="Проєкт лаб"
@@ -197,7 +197,7 @@
               </a>
             </li>
             <li class="portfolio-pic">
-              <a href="/" class="link-pic">
+              <a href="#" class="link-pic">
                 <img
                   src="./images/portfolio9.jpg"
                   alt="Зростання бізнесу"
@@ -241,28 +241,28 @@
           <strong class="tittle-footer">приєднуйтесь</strong>
           <ul class="footer-social">
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href=""
+              <a class="footer-link" href="#"
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
