--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
               </a>
             </li>
             <li class="footer-list">
-              <a class="footer-link" href="#"
+              <a class="footer-link" href=""
                 ><svg class="social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
@@ -434,7 +434,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
