--- a/index.html
+++ b/index.html
@@ -404,28 +404,28 @@
           <ul class="footer-social">
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-link" href=""
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
