--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
           </ul>
           <ul class="portfolio">
             <li class="portfolio-pic">
-              <a href="#" class="link-pic">
+              <a href="/" class="link-pic">
                 <img
                   src="./images/portfolio1.jpg"
                   alt="Технокряк"
@@ -242,28 +242,28 @@
           <ul class="footer-social">
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-link" href="#"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
