--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           <ul class="picture-work">
             <li class="images-work">
               <img src="./images/box1.jpg" alt="ТЗ" width="370" height="294" />
+              <p class="work-info">Десктопні додатки</p>
             </li>
             <li class="images-work">
               <img
@@ -137,6 +138,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-info">Мобільні додатки</p>
             </li>
             <li class="images-work">
               <img
@@ -145,6 +147,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-info">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
