--- a/portfolio.html
+++ b/portfolio.html
@@ -79,17 +79,27 @@
             <li class="button-position">
               <button type="button" class="button-secondary">Маркетинг</button>
             </li>
-            <!-- portfolio -->
           </ul>
+          <!-- portfolio -->
           <ul class="portfolio">
             <li class="portfolio-pic">
               <a href="/" class="link-pic">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Технокряк</h2>
                   <p class="paragraph-portfolio">Веб-сайт</p>
@@ -98,12 +108,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="Постер"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Постер"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">
                     Постер New Orlean vs Golden Star
@@ -114,12 +134,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="Ресторан"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="Ресторан"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Ресторан Seafood</h2>
                   <p class="paragraph-portfolio">Додаток</p>
@@ -128,12 +158,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio4.jpg"
-                  alt="Проєкт прайм"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Проєкт прайм"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Проєкт Prime</h2>
                   <p class="paragraph-portfolio">Маркетинг</p>
@@ -142,12 +182,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="Проєкт бокс"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Проєкт бокс"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Проєкт Boxes</h2>
                   <p class="paragraph-portfolio">Додаток</p>
@@ -156,12 +206,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="Натхнення"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Натхнення"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Inspiration has no Borders</h2>
                   <p class="paragraph-portfolio">Веб-сайт</p>
@@ -170,12 +230,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio7.jpg"
-                  alt="Видання"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Видання"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Видання Limited Edition</h2>
                   <p class="paragraph-portfolio">Дизайн</p>
@@ -184,12 +254,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio8.jpg"
-                  alt="Проєкт лаб"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="Проєкт лаб"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Проєкт LAB</h2>
                   <p class="paragraph-portfolio">Маркетинг</p>
@@ -198,12 +278,22 @@
             </li>
             <li class="portfolio-pic">
               <a href="#" class="link-pic">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="Зростання бізнесу"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-overlay">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="Зростання бізнесу"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="block-info">
+                    <p class="info-overlay">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-tittle">Growing Business</h2>
                   <p class="paragraph-portfolio">Додаток</p>
